themes/default/static/css/style.css
/* ... */
form .datepicker, form .timepicker {
    clear: none;
    margin-right: 0;
}

form input.datepicker {
    width: 115px;
    margin-left: 5px;
    margin-bottom: 5px;
}

form input.timepicker {
    width: 20px;
    margin-left: 5px;
}

select.timepicker {
    width: 55px;
    margin-left: 5px;
}

/**
 * Tables.
 */
 
table {
    clear: both;
    float: left;
    width: 100%;
    border-collapse: collapse;
    margin-bottom: 10px;
}

td, th { padding: 10px; }

td { border-bottom: 1px solid #c0c0c0; }

thead td { border-bottom: none; }

thead td, th {
    color: #fff;
    background: #1f1f1f;
    border-right: 1px solid #fff;
    border-bottom: 1px solid #fff;
    padding: 5px 10px;
}

thead td a, thead td a:link, thead td a:visited,
th a, th a:link, th a:visited { color: #c0c0c0; }

thead td a:hover, th a:hover { color: #fff; }

thead a.asc, thead a.desc {
    float: left;
    width: 100%;
    background-position: right center;
    background-repeat: no-repeat;
}

thead a.asc { background-image: url(images/up.png); }

thead a.desc { background-image: url(images/down.png); }

tr.altrow td { background-color: #f6f6f6; }

th.auto { width: 4%; }
th.boolean { width: 8%; }
th.char, th.email { width: 16%; }

/**
 * Commons.
 */

.disabled { color: #c0c0c0; }

form .submit input, .submit a {
    float: right;
    width: auto;
    padding: 6px 16px;
    margin: 0;
    color: #fff;
    font-weight: bold;
    background: #ce0600;
    border: 1px solid #1f1f1f;
    text-align: center;
}

form .submit input:hover, .submit a:hover { background: #1f1f1f; }

.paginator {
    clear: both;
    float: left;
    width: 100%;
    border-top: 2px solid #c0c0c0;
    padding-top: 10px;
    margin-top: 25px;
    margin-bottom: 10px;
}

.navigator {
    float: right;
    margin-bottom: 10px;
}

.paginator .first, .navigator .first,
.paginator .previous, .navigator .previous,
.paginator .next, .navigator .next,
.paginator .last, .navigator .last,
.paginator .page_number,
.paginator .current, .navigator .current {
    clear: none;
    float: left;
    margin-right: 5px;
    text-align: center;
}

.paginator .current, .navigator .current { padding: 0 5px; }

.paginator .disabled, .navigator .disabled,
.paginator a, .navigator a {
    display: block;
    padding: 0 5px;
    background-repeat: no-repeat;
    background-position: center center;
    font-size: 0;
}

.paginator .first .disabled, .navigator .first .disabled { background-image: url(images/first_disabled.png); }
.paginator .first a, .navigator .first a { background-image: url(images/first.png); }
.paginator .first a:hover, .navigator .first a:hover { background-image: url(images/first_hover.png); }
.paginator .previous .disabled, .navigator .previous .disabled { background-image: url(images/left_disabled.png); }
.paginator .previous a, .navigator .previous a { background-image: url(images/left.png); }
.paginator .previous a:hover, .navigator .previous a:hover { background-image: url(images/left_hover.png); }
.paginator .next .disabled, .navigator .next .disabled { background-image: url(images/right_disabled.png); }
.paginator .next a, .navigator .next a { background-image: url(images/right.png); }
.paginator .next a:hover, .navigator .next a:hover { background-image: url(images/right_hover.png); }
.paginator .last .disabled, .navigator .last .disabled { background-image: url(images/last_disabled.png); }
.paginator .last a, .navigator .last a { background-image: url(images/last.png); }
.paginator .last a:hover, .navigator .last a:hover { background-image: url(images/last_hover.png); }

.paginator .total {
    float: right;
    color: #60625d;
}

.comments {
    float: left;
    width: 100%;
    margin-top: 10px;
    padding-top: 15px;
    border-top: 2px solid #c0c0c0;
}

.comments .meta p {
    margin-left: 54px;
    border-bottom: 1px solid #c0c0c0;
}

.comments li {
    padding-left: 0;
    background: none;
}

.comments li .actions {
    clear: none;
    float: right;
    margin: -20px 0 0;
}

.comments li p { margin: 0; }

.comment-counter {
    float: right;
    width: 100%;
    text-align: right;
    border-top: 1px solid #c0c0c0;
    color: #60625d;
}

.meta {
    color: #60625d;
    font-style: italic;
}

.avatar {
    float: left;
    margin-right: 10px;
    margin-bottom: 10px;
}

.yes, .no {
    display: block;
    width: 16px;
    height: 16px;
    font-size: 0;
    background: no-repeat center;
    margin: 0 auto;
}

.yes { background-image: url(images/success.png); }

.no { background-image: url(images/error.png); }

.add a, .edit a, .delete a, .all a, .import a, .export a,
.open a, .reopen a, .close a, .view a, .exit a, .follow a, .leave a {
    float: left;
    width: 16px;
    height: 16px;
    padding: 0;
    margin-right: 5px;
    background-repeat: no-repeat;
    background-position: center center;
    font-size: 0;
}

.add a { background-image: url(images/add.png); }

.add a:hover { background-image: url(images/add_hover.png); }

.edit a { background-image: url(images/edit.png); }

.edit a:hover { background-image: url(images/edit_hover.png); }

.delete a { background-image: url(images/delete.png); }

.delete a:hover { background-image: url(images/delete_hover.png); }

.all a { background-image: url(images/all.png); }

.all a:hover { background-image: url(images/all_hover.png); }

.import a { background-image: url(images/import.png); }

.import a:hover { background-image: url(images/import_hover.png); }

.export a { background-image: url(images/export.png); }

.export a:hover { background-image: url(images/export_hover.png); }

.open a { background-image: url(images/open.png); }

.open a:hover { background-image: url(images/open_hover.png); }

.reopen a { background-image: url(images/reopen.png); }

.reopen a:hover { background-image: url(images/reopen_hover.png); }

.close a { background-image: url(images/close.png); }

.close a:hover { background-image: url(images/close_hover.png); }
/* ... */

